--- a/src/main/webapp/WEB-INF/views/match_score.html
+++ b/src/main/webapp/WEB-INF/views/match_score.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="match_board">
                     <div class="score_block2">
-                        <h3 class="score_block_text" th:text="${namePlayer1}">Name</h3>
+                        <h3 class="score_block_text" th:text="${player1.getName()}">Name</h3>
                     </div>
                     <div class="score_block2">
                         <h3 class="score_block_text" th:text="${setPlayer1}">Set</h3>
@@ -46,13 +46,13 @@
                     </div>
                     <div class="score_block2">
                         <form th:method="POST" th:action="@{/match-score?uuid={uuid}(uuid=${uuid})}">
-                            <button type="submit" th:value="${player1.getName()}" name="player1" class="second_btn">Win</button>
+                            <button type="submit" th:value="${player1.getId()}" name="playerIdWinPoint" class="second_btn">Win</button>
                         </form>
                     </div>
                 </div>
                 <div class="match_board">
                     <div class="score_block2">
-                        <h3 class="score_block_text" th:text="${namePlayer2}">Name</h3>
+                        <h3 class="score_block_text" th:text="${player2.getName()}">Name</h3>
                     </div>
                     <div class="score_block2">
                         <h3 class="score_block_text" th:text="${setPlayer2}">Set</h3>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="score_block2">
                         <form th:method="POST" th:action="@{/match-score?uuid={uuid}(uuid=${uuid})}">
-                            <button type="submit" class="second_btn">Win</button>
+                            <button type="submit" th:value="${player2.getId()}" name="playerIdWinPoint" class="second_btn">Win</button>
                         </form>
                     </div>
                 </div>
