Update TableScoreTable: version 3

--- a/src/main/webapp/WEB-INF/views/match_score.html
+++ b/src/main/webapp/WEB-INF/views/match_score.html
@@ -69,6 +69,9 @@
                         </form>
                     </div>
                 </div>
+                <form th:method="GET" th:action="@{/new-match}">
+                    <button type="submit" class="first_btn">View matches</button>
+                </form>
             </div>
         </div>
     </div>
