--- a/src/main/webapp/WEB-INF/views/match_score.html
+++ b/src/main/webapp/WEB-INF/views/match_score.html
@@ -69,7 +69,7 @@
                         </form>
                     </div>
                 </div>
-                <form th:method="GET" th:action="@{/new-match}">
+                <form th:method="GET" th:action="@{/matches}">
                     <button type="submit" class="first_btn">View matches</button>
                 </form>
             </div>
